--- a/web/ui/react-app/public/index.html
+++ b/web/ui/react-app/public/index.html
@@ -39,7 +39,7 @@
     -->
     <!--
         The TITLE_PLACEHOLDER magic value is replaced during serving by Prometheus.
-        We need it dynamic because it can be overrided by the command line flag web.page-title.
+        We need it dynamic because it can be overriden by the command line flag `web.page-title`.
     -->
     <title>TITLE_PLACEHOLDER</title>
   </head>
